--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^1.7.7",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
