donate, functions, etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
             "database": "ZooDB",
             "username": "zoo"
         }
-    ]
+    ],
+    "github-enterprise.uri": "https://c"
 }
