--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
     "url": "http://localhost:3000",
-    "port": 3000
+    "port": 3000,
+    "inventory": ["Gift Shop", "Restraunt", "Concession"]
 }
