--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
@@ -17,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "stripe": "^17.2.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
