--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,13 +2,13 @@
     "version" : 2,
     "builds": [
         {
-            "src": "./server.js",
-            "use": "@vercel/node"
+            "src": "/",
+            "dest": "/"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/",
             "dest": "/"
         }
     ]
