--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "url": "http://localhost:4000",
+    "url": "https://zoo-db-2-uf6c-production.vercel.app/",
     "port": 4000,
     "inventory": ["Gift Shop", "Restraunt", "Concession"]
 }
