--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
