--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
