--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "mysql2": "^3.11.3",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
     "react-chartjs-2": "^5.2.0",
