--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "stripe": "^17.3.0"
   }
 }
