--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "install": "^0.13.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "mysql2": "^3.11.3",
     "npm": "^10.9.0",
