--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "mailtrap": "^3.4.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
